0.16.x/_sources/api/skimage.morphology.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`morphology`
=========================
.. automodule:: skimage.morphology

.. currentmodule:: skimage.morphology
.. autosummary::

   skimage.morphology.binary_erosion
   skimage.morphology.binary_dilation
   skimage.morphology.binary_opening
   skimage.morphology.binary_closing
   skimage.morphology.erosion
   skimage.morphology.dilation
   skimage.morphology.opening
   skimage.morphology.closing
   skimage.morphology.white_tophat
   skimage.morphology.black_tophat
   skimage.morphology.square
   skimage.morphology.rectangle
   skimage.morphology.diamond
   skimage.morphology.disk
   skimage.morphology.cube
   skimage.morphology.octahedron
   skimage.morphology.ball
   skimage.morphology.octagon
   skimage.morphology.star
   skimage.morphology.label
   skimage.morphology.watershed
   skimage.morphology.skeletonize
   skimage.morphology.skeletonize_3d
   skimage.morphology.thin
   skimage.morphology.medial_axis
   skimage.morphology.convex_hull_image
   skimage.morphology.convex_hull_object
   skimage.morphology.reconstruction
   skimage.morphology.remove_small_objects
   skimage.morphology.remove_small_holes
   skimage.morphology.h_minima
   skimage.morphology.h_maxima
   skimage.morphology.local_maxima
   skimage.morphology.local_minima
   skimage.morphology.flood
   skimage.morphology.flood_fill
   skimage.morphology.max_tree
   skimage.morphology.area_opening
   skimage.morphology.area_closing
   skimage.morphology.diameter_opening
   skimage.morphology.diameter_closing
   skimage.morphology.max_tree_local_maxima



binary_erosion
--------------

.. autofunction:: skimage.morphology.binary_erosion


.. include:: skimage.morphology.binary_erosion.examples

binary_dilation
---------------

.. autofunction:: skimage.morphology.binary_dilation


.. include:: skimage.morphology.binary_dilation.examples

binary_opening
--------------

.. autofunction:: skimage.morphology.binary_opening


.. include:: skimage.morphology.binary_opening.examples

binary_closing
--------------

.. autofunction:: skimage.morphology.binary_closing


.. include:: skimage.morphology.binary_closing.examples

erosion
-------

.. autofunction:: skimage.morphology.erosion


.. include:: skimage.morphology.erosion.examples

dilation
--------

.. autofunction:: skimage.morphology.dilation


.. include:: skimage.morphology.dilation.examples

opening
-------

.. autofunction:: skimage.morphology.opening


.. include:: skimage.morphology.opening.examples

closing
-------

.. autofunction:: skimage.morphology.closing


.. include:: skimage.morphology.closing.examples

white_tophat
------------

.. autofunction:: skimage.morphology.white_tophat


.. include:: skimage.morphology.white_tophat.examples

black_tophat
------------

.. autofunction:: skimage.morphology.black_tophat


.. include:: skimage.morphology.black_tophat.examples

square
------

.. autofunction:: skimage.morphology.square


.. include:: skimage.morphology.square.examples

rectangle
---------

.. autofunction:: skimage.morphology.rectangle


.. include:: skimage.morphology.rectangle.examples

diamond
-------

.. autofunction:: skimage.morphology.diamond


.. include:: skimage.morphology.diamond.examples

disk
----

.. autofunction:: skimage.morphology.disk


.. include:: skimage.morphology.disk.examples

cube
----

.. autofunction:: skimage.morphology.cube


.. include:: skimage.morphology.cube.examples

octahedron
----------

.. autofunction:: skimage.morphology.octahedron


.. include:: skimage.morphology.octahedron.examples

ball
----

.. autofunction:: skimage.morphology.ball


.. include:: skimage.morphology.ball.examples

octagon
-------

.. autofunction:: skimage.morphology.octagon


.. include:: skimage.morphology.octagon.examples

star
----

.. autofunction:: skimage.morphology.star


.. include:: skimage.morphology.star.examples

label
-----

.. autofunction:: skimage.morphology.label


.. include:: skimage.morphology.label.examples

watershed
---------

.. autofunction:: skimage.morphology.watershed


.. include:: skimage.morphology.watershed.examples

skeletonize
-----------

.. autofunction:: skimage.morphology.skeletonize


.. include:: skimage.morphology.skeletonize.examples

skeletonize_3d
--------------

.. autofunction:: skimage.morphology.skeletonize_3d


.. include:: skimage.morphology.skeletonize_3d.examples

thin
----

.. autofunction:: skimage.morphology.thin


.. include:: skimage.morphology.thin.examples

medial_axis
-----------

.. autofunction:: skimage.morphology.medial_axis


.. include:: skimage.morphology.medial_axis.examples

convex_hull_image
-----------------

.. autofunction:: skimage.morphology.convex_hull_image


.. include:: skimage.morphology.convex_hull_image.examples

convex_hull_object
------------------

.. autofunction:: skimage.morphology.convex_hull_object


.. include:: skimage.morphology.convex_hull_object.examples

reconstruction
--------------

.. autofunction:: skimage.morphology.reconstruction


.. include:: skimage.morphology.reconstruction.examples

remove_small_objects
--------------------

.. autofunction:: skimage.morphology.remove_small_objects


.. include:: skimage.morphology.remove_small_objects.examples

remove_small_holes
------------------

.. autofunction:: skimage.morphology.remove_small_holes


.. include:: skimage.morphology.remove_small_holes.examples

h_minima
--------

.. autofunction:: skimage.morphology.h_minima


.. include:: skimage.morphology.h_minima.examples

h_maxima
--------

.. autofunction:: skimage.morphology.h_maxima


.. include:: skimage.morphology.h_maxima.examples

local_maxima
------------

.. autofunction:: skimage.morphology.local_maxima


.. include:: skimage.morphology.local_maxima.examples

local_minima
------------

.. autofunction:: skimage.morphology.local_minima


.. include:: skimage.morphology.local_minima.examples

flood
-----

.. autofunction:: skimage.morphology.flood


.. include:: skimage.morphology.flood.examples

flood_fill
----------

.. autofunction:: skimage.morphology.flood_fill


.. include:: skimage.morphology.flood_fill.examples

max_tree
--------

.. autofunction:: skimage.morphology.max_tree


.. include:: skimage.morphology.max_tree.examples

area_opening
------------

.. autofunction:: skimage.morphology.area_opening


.. include:: skimage.morphology.area_opening.examples

area_closing
------------

.. autofunction:: skimage.morphology.area_closing


.. include:: skimage.morphology.area_closing.examples

diameter_opening
----------------

.. autofunction:: skimage.morphology.diameter_opening


.. include:: skimage.morphology.diameter_opening.examples

diameter_closing
----------------

.. autofunction:: skimage.morphology.diameter_closing


.. include:: skimage.morphology.diameter_closing.examples

max_tree_local_maxima
---------------------

.. autofunction:: skimage.morphology.max_tree_local_maxima


.. include:: skimage.morphology.max_tree_local_maxima.examples

